Resolve android API issues